Become a merchant added
