# routes/user.js
@@ -3,7 +3,7 @@ const { check } = require('express-validator');
 const router = express.Router();
 
 const { authorizeUser, isEmailVerified } = require('../middlewares/authorize')
-const { register, verifyEmail, login, forgotPassword, resetPassword, resendPasswordOtp, resendRegisterOtp, uploadImage } = require('../controllers/auth')
+const { register, verifyEmail, login, forgotPassword, resetPassword, resendPasswordOtp, resendRegisterOtp, uploadImage, becomeAMerchant } = require('../controllers/auth')
 
 router.post('/register', register)
 router.post('/login', login)
@@ -15,5 +15,7 @@ router.post('/resend-otp', resendPasswordOtp);
 
 router.use(authorizeUser)
 router.patch('/upload-avatar', uploadImage)
+router.use(isEmailVerified)
+router.patch('/become-a-merchant', becomeAMerchant)
 module.exports = router;
 
